Varioius fixes to spacing on mobile

--- a/css/components/viewport.css
+++ b/css/components/viewport.css
@@ -2,6 +2,7 @@
     --top-nav-height: 80px;
     background: white;
     padding: 15px;
+    padding-top: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     display: flex;
     flex-direction: column;
@@ -17,6 +18,10 @@
     width: 100%;
     height: 200px;
     background: white;
+}
+
+[data-component~="viewport"] .view-tinder {
+  padding-top: 15px;
 }
 
 [data-component~="viewport"] .view-timeline,
@@ -47,7 +52,9 @@
 [data-component~="viewport"] ul.view-timeline {
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 @media (prefers-color-scheme: dark) {
